--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-svgr": "^2.0.1",
     "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-sharp": "^2.1.8",
+    "nuka-carousel": "^4.5.9",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-anchor-link-smooth-scroll": "^1.0.11",
