--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "gatsby-transformer-sharp": "^2.1.8",
     "nuka-carousel": "^4.5.9",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
+    "react": "^16.8.3",
     "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-collapsible": "^2.6.0",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
+    "react-pose": "^4.0.8",
     "react-scrollspy": "^3.3.5",
     "styled-components": "^4.1.3"
   },
