--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
+    "gatsby-plugin-scroll-reveal": "^0.0.4",
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-svgr": "^2.0.1",
@@ -20,6 +21,7 @@
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-source-instagram-all": "^2.0.5",
     "gatsby-transformer-json": "^2.2.2",
+    "gatsby-transformer-remark": "^2.6.32",
     "gatsby-transformer-sharp": "^2.1.8",
     "nuka-carousel": "^4.5.9",
     "prop-types": "^15.6.2",
@@ -28,8 +30,11 @@
     "react-collapsible": "^2.6.0",
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
+    "react-modal": "^3.11.1",
     "react-pose": "^4.0.8",
+    "react-scroll-parallax": "^2.2.0",
     "react-scrollspy": "^3.3.5",
+    "react-spring": "^8.0.27",
     "styled-components": "^4.1.3"
   },
   "keywords": [
