Change UI and add sub pages

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Ajay NS <ajay.ns@outlook.com>",
   "dependencies": {
     "@svgr/webpack": "^4.1.0",
+    "bootstrap": "^4.4.1",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-alias-imports": "^1.0.5",
@@ -17,16 +18,19 @@
     "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-svgr": "^2.0.1",
+    "gatsby-plugin-transition-link": "^1.17.7",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-source-instagram-all": "^2.0.5",
     "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-remark": "^2.6.32",
     "gatsby-transformer-sharp": "^2.1.8",
+    "gsap": "^3.0.5",
     "nuka-carousel": "^4.5.9",
     "prop-types": "^15.6.2",
     "react": "^16.8.3",
     "react-anchor-link-smooth-scroll": "^1.0.11",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-collapsible": "^2.6.0",
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
