--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-remark": "^2.6.32",
     "gatsby-transformer-sharp": "^2.1.8",
+    "gh-pages": "^2.2.0",
     "gsap": "^3.0.5",
     "nuka-carousel": "^4.5.9",
     "prop-types": "^15.6.2",
@@ -51,7 +52,8 @@
     "dev": "gatsby develop",
     "start": "npm run dev",
     "format": "prettier --write \"src/**/*.js\"",
-    "clean": "rm -rf .cache && rm -rf public"
+    "clean": "rm -rf .cache && rm -rf public",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "devDependencies": {
     "prettier": "^1.15.2"
