--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-collapsible": "^2.6.0",
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.9.0",
     "react-modal": "^3.11.1",
     "react-pose": "^4.0.8",
     "react-scroll-parallax": "^2.2.0",
